--- a/AllenEcommerceBlazorApp/Client/_Imports.razor
+++ b/AllenEcommerceBlazorApp/Client/_Imports.razor
@@ -8,4 +8,5 @@
 @using Microsoft.JSInterop
 @using AllenEcommerceBlazorApp.Client
 @using AllenEcommerceBlazorApp.Client.Shared
+@using AllenEcommerceBlazorApp.Shared;
 
