--- a/AllenEcommerceBlazorApp/Client/Shared/ProductList.razor
+++ b/AllenEcommerceBlazorApp/Client/Shared/ProductList.razor
@@ -34,9 +34,9 @@
 
     protected override async Task OnInitializedAsync()
     {
-        var result = await Http.GetFromJsonAsync<List<Product>>("api/Product");
-        if (result != null)
-            Products = result;
+        var result = await Http.GetFromJsonAsync<ServiceResponse<List<Product>>>("api/Product");
+        if (result != null && result.Data != null)
+            Products = result.Data;
     }
 
 }
