--- a/AllenEcommerceBlazorApp/Client/_Imports.razor
+++ b/AllenEcommerceBlazorApp/Client/_Imports.razor
@@ -9,4 +9,4 @@
 @using AllenEcommerceBlazorApp.Client
 @using AllenEcommerceBlazorApp.Client.Shared
 @using AllenEcommerceBlazorApp.Shared;
-
+@using AllenEcommerceBlazorApp.Client.Services.ProductServices;
