Product Details, Categories & Seeding more Product
Categories and seeding more product

--- a/AllenEcommerceBlazorApp/Client/Shared/ProductList.razor
+++ b/AllenEcommerceBlazorApp/Client/Shared/ProductList.razor
@@ -14,13 +14,13 @@
                        <li class="media my-3">
 
                            <div class=" media-img-wrapper">
-                               <a href="#">
+                               <a href="/product/@product.Id">
                                    <img class="media-img" src="@product.ImageUrl" alt="@product.Title" />
                                </a>
                            </div>
 
                            <div class="media-body">
-                               <a href="#">
+                               <a href="/product/@product.Id">
                                    <h4 class="mb-0">@product.Title</h4>
                                </a>
 
