--- a/AllenEcommerceBlazorApp/Client/_Imports.razor
+++ b/AllenEcommerceBlazorApp/Client/_Imports.razor
@@ -10,3 +10,4 @@
 @using AllenEcommerceBlazorApp.Client.Shared
 @using AllenEcommerceBlazorApp.Shared;
 @using AllenEcommerceBlazorApp.Client.Services.ProductServices;
+@using AllenEcommerceBlazorApp.Client.Services.CategoryService;
