--- a/AllenEcommerceBlazorApp/Client/Pages/Index.razor
+++ b/AllenEcommerceBlazorApp/Client/Pages/Index.razor
@@ -1,5 +1,19 @@
 ﻿@page "/"
+@page "/{categoryUrl}"
+@inject IProductService ProductService
 
 <PageTitle>My Shop</PageTitle>
 
 <ProductList></ProductList>
+
+@code {
+
+    [Parameter]
+    public string? CategoryUrl { get; set; } = null;
+
+    protected override async Task OnParametersSetAsync()
+    {
+        await ProductService.GetProducts(CategoryUrl);
+    }
+
+}
