--- a/AllenEcommerceBlazorApp/Client/Shared/ProductList.razor
+++ b/AllenEcommerceBlazorApp/Client/Shared/ProductList.razor
@@ -1,4 +1,5 @@
 ﻿@inject IProductService ProductService
+@implements IDisposable
 
 
 @if (ProductService.Products == null || ProductService.Products.Count == 0)
@@ -36,10 +37,16 @@
             </ul>
     }
 @code {
- 
-    protected override async Task OnInitializedAsync()
+
+    protected override void OnInitialized()
     {
-        await ProductService.GetProducts();
+        ProductService.ProductChanged += StateHasChanged;
+    }
+
+    public void Dispose()
+    {
+
+        ProductService.ProductChanged -= StateHasChanged;
     }
 
 }
