ProductVariants and productType
use Relational Database

--- a/AllenEcommerceBlazorApp/Client/Pages/ProductDetails.razor
+++ b/AllenEcommerceBlazorApp/Client/Pages/ProductDetails.razor
@@ -21,7 +21,7 @@
                    
                         <p>@product.Description</p>
                         <h4 class="price"> 
-                            ₱@product.Price
+                            @*₱@product.Price*@
                         </h4>
                     </div>
                 </div>
