--- a/AllenEcommerceBlazorApp/Client/Shared/ProductList.razor
+++ b/AllenEcommerceBlazorApp/Client/Shared/ProductList.razor
@@ -27,7 +27,7 @@
 
                                <p>@product.Description</p>
                                <h5 class="price">
-                                   ₱@product.Price
+                                   @*₱@product.Price*@
                                </h5>
                            </div>
 
