--- a/AllenEcommerceBlazorApp/Client/Shared/ProductList.razor
+++ b/AllenEcommerceBlazorApp/Client/Shared/ProductList.razor
@@ -27,7 +27,7 @@
 
                                <p>@product.Description</p>
                                <h5 class="price">
-                                   @*₱@product.Price*@
+                                  @GetPriceText(product)
                                </h5>
                            </div>
 
@@ -47,6 +47,24 @@
     {
 
         ProductService.ProductChanged -= StateHasChanged;
+    }
+
+    //function for filtering price and orig price
+
+    private string GetPriceText(Product product)
+    {
+
+        var variants = product.Variants;
+        if(variants.Count == 0)
+        {
+            return string.Empty;
+        }
+        else if (variants.Count == 1)
+        {
+            return $"₱{variants[0].Price}";
+        }
+        decimal minPrice = variants.Min(v => v.Price);
+        return $"Starting at ₱{minPrice}";
     }
 
 }
