--- a/AllenEcommerceBlazorApp/Client/Shared/ProductList.razor
+++ b/AllenEcommerceBlazorApp/Client/Shared/ProductList.razor
@@ -4,7 +4,7 @@
 
 @if (ProductService.Products == null || ProductService.Products.Count == 0)
     {
-        <span> Loading Products....</span>
+        <span> @ProductService.Message</span>
     }
     else
     {
