--- a/AllenEcommerceBlazorApp/Client/Pages/Index.razor
+++ b/AllenEcommerceBlazorApp/Client/Pages/Index.razor
@@ -5,7 +5,15 @@
 
 <PageTitle>My Shop</PageTitle>
 
-<ProductList></ProductList>
+@if (SearchText == null && CategoryUrl == null)
+{
+    <FeaturedProduct></FeaturedProduct>
+}
+else
+{
+    <ProductList />
+}
+
 
 @code {
 
