--- a/AllenEcommerceBlazorApp/Client/Pages/Index.razor
+++ b/AllenEcommerceBlazorApp/Client/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@page "/search/{searchText}"
+@page "/search/{searchText}/{page:int}"
 @page "/{categoryUrl}"
 @inject IProductService ProductService
 
@@ -24,11 +24,14 @@ else
     [Parameter]
     public string? CategoryUrl { get; set; } = null;
 
+    [Parameter]
+    public int Page { get; set; } = 1;
+
     protected override async Task OnParametersSetAsync()
     {
         if (SearchText != null)
         {
-            await ProductService.SearchProducts(SearchText);
+            await ProductService.SearchProducts(SearchText, Page);
         }
         else
         {
