--- a/AllenEcommerceBlazorApp/Client/Shared/ProductList.razor
+++ b/AllenEcommerceBlazorApp/Client/Shared/ProductList.razor
@@ -35,6 +35,15 @@
                    }
 
             </ul>
+
+        for (int i = 1; i <= ProductService.PageCount; i++)
+        {
+            <a class="btn
+                @(i == ProductService.CurrentPage?"btn-info":"btn-outline-info")
+                page-selection"
+                href="/search/@ProductService.LastSearchText/@i">@i
+            </a>
+        }
     }
 @code {
 
