--- a/AllenEcommerceBlazorApp/Client/Shared/ProductList.razor.css
+++ b/AllenEcommerceBlazorApp/Client/Shared/ProductList.razor.css
@@ -28,7 +28,11 @@
     text-align:center;
 }
 
+.page-selection {
 
+    margin-right:15px;
+    margin-bottom:30px;
+}
 
 @media (max-width:1293px) {
 
