--- a/AllenEcommerceBlazorApp/Client/Shared/Search.razor
+++ b/AllenEcommerceBlazorApp/Client/Shared/Search.razor
@@ -42,7 +42,7 @@
 
     public void SearchProducts()
     {
-        NavigationManager.NavigateTo($"search/{searchText}");
+        NavigationManager.NavigateTo($"search/{searchText}/1");
     }
 
 
