--- a/AllenEcommerceBlazorApp/Client/Pages/ProductDetails.razor
+++ b/AllenEcommerceBlazorApp/Client/Pages/ProductDetails.razor
@@ -1,5 +1,6 @@
-﻿@page "/product/{id:int}"
+﻿    @page "/product/{id:int}"
 @inject IProductService ProductService
+@inject ICartService CartService
 
 
 @if (product == null)
@@ -43,6 +44,9 @@
                     <h4 class="price">
                         ₱@GetSelectedVariant().Price
                     </h4>
+                    <button class="btn btn-primary" @onclick="AddToCart">
+                        <i class="oi oi-cart"></i>&nbsp;&nbsp;&nbsp;&nbsp;Add to Cart
+                    </button>
                     </div>
                 </div>
             }
@@ -82,6 +86,17 @@
         var variant = product.Variants.FirstOrDefault(v => v.ProductTypeId == currentTypeId);
 
         return variant;
+    }
+
+    private async Task AddToCart()
+    {
+        var productVariant = GetSelectedVariant();
+        var cartItem = new CartItem
+        {
+            ProductId = productVariant.ProductId,
+            ProductTypeId = productVariant.ProductTypeId
+        };
+        await CartService.AddToCart(cartItem);    
     }
 
 }
