--- a/AllenEcommerceBlazorApp/Client/_Imports.razor
+++ b/AllenEcommerceBlazorApp/Client/_Imports.razor
@@ -8,6 +8,8 @@
 @using Microsoft.JSInterop
 @using AllenEcommerceBlazorApp.Client
 @using AllenEcommerceBlazorApp.Client.Shared
-@using AllenEcommerceBlazorApp.Shared;
-@using AllenEcommerceBlazorApp.Client.Services.ProductServices;
-@using AllenEcommerceBlazorApp.Client.Services.CategoryService;
+@using AllenEcommerceBlazorApp.Shared
+@using AllenEcommerceBlazorApp.Client.Services.ProductServices
+@using AllenEcommerceBlazorApp.Client.Services.CategoryService
+@using Blazored.LocalStorage
+@using AllenEcommerceBlazorApp.Client.Services.CartService
