--- a/AllenEcommerceBlazorApp/Client/Shared/ShopLayout.razor
+++ b/AllenEcommerceBlazorApp/Client/Shared/ShopLayout.razor
@@ -6,7 +6,8 @@
         <div class="top-row px-2">
             <HomeButton/>
             <Search/>
-        </div>
+            <CartCounter></CartCounter>
+        </div>  
 
         <div class="nav-menu">
             <ShopNavMenu></ShopNavMenu>
