Delete item from the cart
delete

--- a/AllenEcommerceBlazorApp/Client/Pages/Cart.razor
+++ b/AllenEcommerceBlazorApp/Client/Pages/Cart.razor
@@ -22,6 +22,8 @@
                                 <div class="name">
                                    <h5><a href="/product/@product.ProductId">@product.Title</a></h5>
                                     <span>@product.ProductType</span>
+                                    <br />
+                                    <button class="btn btn-delete" @onclick="@(() => RemoveProductFromCart(product.ProductId , product.ProductTypeId))">Delete</button>
                                 </div>
                                 <div class="cart-product-price">
                                     @product.Price
@@ -53,6 +55,25 @@
             cartProducts = await CartService.GetCartProducts();
         }
 
+    }
+
+    private async Task RemoveProductFromCart(int productId, int productTypeId)
+    {
+        await CartService.RemoveProductFromCart(productId, productTypeId);
+        await LoadCart();
+    }
+
+    private async Task LoadCart()
+    {
+        if((await CartService.GetCartItems()).Count == 0)
+        {
+            message = "Your cart is empty.";
+            cartProducts = new List<CartProductResponseDTO>();
+        }
+        else
+        {
+            cartProducts = await CartService.GetCartProducts(); 
+        }
     }
 }
 
