--- a/AllenEcommerceBlazorApp/Client/Pages/Cart.razor.css
+++ b/AllenEcommerceBlazorApp/Client/Pages/Cart.razor.css
@@ -23,6 +23,17 @@
 
 .cart-product-price {
     font-weight:600;
-    text-align:right;
+    text-align:right;   
 
 }
+
+.btn-delete {
+    background:none;
+    border:none;
+    padding:0px;
+    color:red;
+    font-size: 12px;
+}
+    .btn-delete:hover {
+        text-decoration:underline;
+    }
