--- a/AllenEcommerceBlazorApp/Client/Pages/Cart.razor
+++ b/AllenEcommerceBlazorApp/Client/Pages/Cart.razor
@@ -23,16 +23,19 @@
                                    <h5><a href="/product/@product.ProductId">@product.Title</a></h5>
                                     <span>@product.ProductType</span>
                                     <br />
+                                    <input type="number" value="@product.Quantity"
+                                           @onchange="@((ChangeEventArgs e)=> UpdateQuantity(e,product))"
+                                           class="form-control input-quantity" min="1"/>
                                     <button class="btn btn-delete" @onclick="@(() => RemoveProductFromCart(product.ProductId , product.ProductTypeId))">Delete</button>
                                 </div>
                                 <div class="cart-product-price">
-                                    @product.Price
+                                    @(product.Price * product.Quantity)
                                 </div>
                             </div>
                         }
 
                 <div class="cart-product-price">
-                    Total (@cartProducts.Count): ₱@cartProducts.Sum(product => product.Price)
+                    Total (@cartProducts.Count): ₱@cartProducts.Sum(product => product.Price * product.Quantity)
                 </div>
                 </div>
             }
@@ -72,8 +75,18 @@
         }
         else
         {
-            cartProducts = await CartService.GetCartProducts(); 
+            cartProducts = await CartService.GetCartProducts();
         }
+    }
+
+    private async Task UpdateQuantity(ChangeEventArgs e , CartProductResponseDTO product)
+    {
+        product.Quantity = int.Parse(e.Value.ToString());
+        if (product.Quantity < 1)
+            product.Quantity = 1;
+
+        await CartService.UpdateQuantity(product);
+
     }
 }
 
