--- a/AllenEcommerceBlazorApp/Client/Shared/HomeButton.razor
+++ b/AllenEcommerceBlazorApp/Client/Shared/HomeButton.razor
@@ -1,7 +1,7 @@
 ﻿@inject NavigationManager NavigationManager
         <div class="logo-container">
         <button @onclick="GoToHome" class="btn btn-outline-primary homebutton">
-            Allen Shop
+            Cj Shop
         </button>
         </div>
         @code {
