--- a/AllenEcommerceBlazorApp/Client/_Imports.razor
+++ b/AllenEcommerceBlazorApp/Client/_Imports.razor
@@ -13,3 +13,4 @@
 @using AllenEcommerceBlazorApp.Client.Services.CategoryService
 @using Blazored.LocalStorage
 @using AllenEcommerceBlazorApp.Client.Services.CartService
+@using AllenEcommerceBlazorApp.Client.Services.AuthService
