--- a/AllenEcommerceBlazorApp/Client/Shared/UserButton.razor
+++ b/AllenEcommerceBlazorApp/Client/Shared/UserButton.razor
@@ -7,6 +7,7 @@
 
     <div class="dropdown-menu dropdown-menu-right @UserMenuCssClass">
         <a href="register" class="dropdown-item">Register</a>
+        <a href="login" class="dropdown-item">Login</a>
     </div>
 
 </div>
