--- a/AllenEcommerceBlazorApp/Client/_Imports.razor
+++ b/AllenEcommerceBlazorApp/Client/_Imports.razor
@@ -14,3 +14,4 @@
 @using Blazored.LocalStorage
 @using AllenEcommerceBlazorApp.Client.Services.CartService
 @using AllenEcommerceBlazorApp.Client.Services.AuthService
+@using Microsoft.AspNetCore.Components.Authorization
