--- a/AllenEcommerceBlazorApp/Client/_Imports.razor
+++ b/AllenEcommerceBlazorApp/Client/_Imports.razor
@@ -15,3 +15,4 @@
 @using AllenEcommerceBlazorApp.Client.Services.CartService
 @using AllenEcommerceBlazorApp.Client.Services.AuthService
 @using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
