--- a/AllenEcommerceBlazorApp/Client/Pages/Profile.razor
+++ b/AllenEcommerceBlazorApp/Client/Pages/Profile.razor
@@ -1,14 +1,40 @@
 ﻿@page "/profile"
+@inject IAuthService AuthService
 @attribute [Authorize]
+
+
 <AuthorizeView>
     <h3>Hi Youre logged in with<i>@context.User.Identity.Name</i>.</h3>
-
-
 </AuthorizeView>
+<h5>Change Password</h5>
 
+<EditForm Model="request" OnValidSubmit="ChangePassword">
+    <DataAnnotationsValidator></DataAnnotationsValidator>   
+
+    <div class="mb-3">
+        <label for="password"> New Password</label>
+        <InputText id="password" class="form-control" @bind-Value="request.Password" type="password"></InputText>
+        <ValidationMessage For="@(()=>request.Password)"></ValidationMessage>
+    </div>
+    <div class="mb-3">
+        <label for="confirmPassword">Confirm New Password</label>
+        <InputText id="email" class="form-control" @bind-Value="request.ConfirmPassword" type="password"></InputText>
+        <ValidationMessage For="@(()=>request.ConfirmPassword)"></ValidationMessage>
+    </div>
+    <button type="submit" class="btn btn-primary">Apply</button>
+</EditForm>
+@message
 @code {
 
+    UserChangePassword request = new UserChangePassword();
 
+    string message = string.Empty;
+
+    private async Task ChangePassword()
+    {
+        var result = await AuthService.ChangePassword(request);
+        message = result.Message;
+    }
 
 }
 
