--- a/AllenEcommerceBlazorApp/Client/Shared/CartCounter.razor
+++ b/AllenEcommerceBlazorApp/Client/Shared/CartCounter.razor
@@ -11,8 +11,8 @@
 
     private int GetCartItemCount()
     {
-        var cart = LocalStorage.GetItem<List<CartItem>>("cart");
-        return cart != null ? cart.Count : 0;
+        var count = LocalStorage.GetItem<int>("cartItemsCount");
+        return count;
 
     }
 
