--- a/AllenEcommerceBlazorApp/Client/Pages/Cart.razor
+++ b/AllenEcommerceBlazorApp/Client/Pages/Cart.razor
@@ -48,15 +48,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        if((await CartService.GetCartItems()).Count == 0)
-        {
-            message = "Your cart is empty.";
-            cartProducts = new List<CartProductResponseDTO>();
-        }
-        else
-        {
-            cartProducts = await CartService.GetCartProducts();
-        }
+        await LoadCart();
 
     }
 
@@ -68,15 +60,14 @@
 
     private async Task LoadCart()
     {
-        if((await CartService.GetCartItems()).Count == 0)
+        await CartService.GetCartItemsCount();
+        cartProducts = await CartService.GetCartProducts();
+        if(cartProducts == null || cartProducts.Count == 0)
         {
             message = "Your cart is empty.";
-            cartProducts = new List<CartProductResponseDTO>();
+
         }
-        else
-        {
-            cartProducts = await CartService.GetCartProducts();
-        }
+
     }
 
     private async Task UpdateQuantity(ChangeEventArgs e , CartProductResponseDTO product)
