--- a/AllenEcommerceBlazorApp/Client/_Imports.razor
+++ b/AllenEcommerceBlazorApp/Client/_Imports.razor
@@ -14,5 +14,6 @@
 @using Blazored.LocalStorage
 @using AllenEcommerceBlazorApp.Client.Services.CartService
 @using AllenEcommerceBlazorApp.Client.Services.AuthService
+@using AllenEcommerceBlazorApp.Client.Services.OrderService
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Authorization
