--- a/AllenEcommerceBlazorApp/Client/Pages/Cart.razor
+++ b/AllenEcommerceBlazorApp/Client/Pages/Cart.razor
@@ -10,6 +10,11 @@
             {
                 <span>@message</span>
             }
+
+            else if (orderPlaced)
+            {
+                <span>Thank you for your order! You can check your orders <a href="orders">here</a>.</span>
+            }
             else
             {
                 <div>
@@ -50,8 +55,11 @@
 
     string message = "Loading Cart....";
 
+    bool orderPlaced = false;
+
     protected override async Task OnInitializedAsync()
     {
+        orderPlaced = false;
         await LoadCart();
 
     }
@@ -87,7 +95,10 @@
 
     public async Task PlaceOrder()
     {
-        await OrderService.PlaceOrder();    
+        await OrderService.PlaceOrder();
+        await CartService.GetCartItemsCount();
+        orderPlaced = true;
+
     }
 
 }
