--- a/AllenEcommerceBlazorApp/Client/Shared/UserButton.razor
+++ b/AllenEcommerceBlazorApp/Client/Shared/UserButton.razor
@@ -14,6 +14,7 @@
         <AuthorizeView>
             <Authorized>
                 <a href="profile" class="dropdown-item">Profile</a>
+                <a href="orders" class="dropdown-item">Orders</a>
                 <hr />
                 <button @onclick="Logout" class="dropdown-item">Log out</button>
             </Authorized>
