--- a/AllenEcommerceBlazorApp/Client/_Imports.razor
+++ b/AllenEcommerceBlazorApp/Client/_Imports.razor
@@ -15,5 +15,6 @@
 @using AllenEcommerceBlazorApp.Client.Services.CartService
 @using AllenEcommerceBlazorApp.Client.Services.AuthService
 @using AllenEcommerceBlazorApp.Client.Services.OrderService
+@using AllenEcommerceBlazorApp.Client.Services.AddressService
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Authorization
