--- a/AllenEcommerceBlazorApp/Client/_Imports.razor
+++ b/AllenEcommerceBlazorApp/Client/_Imports.razor
@@ -16,5 +16,7 @@
 @using AllenEcommerceBlazorApp.Client.Services.AuthService
 @using AllenEcommerceBlazorApp.Client.Services.OrderService
 @using AllenEcommerceBlazorApp.Client.Services.AddressService
+@using AllenEcommerceBlazorApp.Client.Services.ProductTypeService
+
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Authorization
